fix spacing

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@
 
 .content-home * {
     margin-left: 6px;
+    margin-right: 6px;
 }
 
 .hover-underline-animation {
